--- a/week9_Cudzich_Greg/cudzich-todo/package.json
+++ b/week9_Cudzich_Greg/cudzich-todo/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
+    "connect-history-api-fallback": "^1.6.0",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
     "mongoose": "^5.10.9"
